jEdit 5.0 version history
       (changes since jEdit 4.5)
:encoding=UTF-8:

{{{ Version 5.0pre1

Thanks to Björn "Vampire" Kautler, Nathan Gray and Matthieu Casanova for
contributing to this release.

{{{ Bug fixes


}}}
{{{ API Changes
- TextUtilities.join() now accept Collection<?> instead of Collection<String>
  (Matthieu Casanova)

}}}
{{{ Editing


}}}
{{{ UI
- Changed menus to use Mac-specific symbols for accelerator keys when using
  OS X and the native look & feel (SF.net patch #1950147 - Nathan Gray)

}}}
{{{ Miscellaneous
- jEdit support for keymaps (Matthieu Casanova)

}}}

}}}

jEdit buffer local properties:
:folding=explicit:collapseFolds=2: